--- a/web-resources/index.html
+++ b/web-resources/index.html
@@ -3,7 +3,7 @@
     <title>Chiiki</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
-<body class="page header-translucent header-ontop page-index-jobs navbar-layout-default">
+<body class="page">
 <div id="main"></div>
 </body>
 </html>
