--- a/web-resources/index.html
+++ b/web-resources/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>Chiiki</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body class="page">
 <div id="main"></div>
